# sunpy-soar

./: .codespellrc  .coveragerc  .cruft.json  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .readthedocs.yml  .rtd-environment.yml  .ruff.toml  CHANGELOG.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.rst  README.rst.rej  index.rst  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  test.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml  python-release.yml  python-test.yml  scheduled_builds.yml  stale_bot.yml  sub_package_update.yml
changelog/: 100.removal.rst  118.feature.rst  121.doc.rst  121.feature.rst  139.breaking.rst  147.doc.rst  184.feature.rst  190.breaking.rst  192.bugfix.rst  206.feature.rst  94.bugfix.rst  95.trivial.rst  96.feature.rst
docs/: api.rst  changelog.rst  coc.rst  conf.py  conf.py.rej  index.rst  nitpick-exceptions
docs/dev_guide/: index.rst  query.rst  tables.rst  working.rst
docs/how_to/: index.rst  wavelength.rst
docs/whatsnew/: index.rst
examples/: FOV.py  README.txt  detector_wavelength.py  detector_wavelength_range.py  example_template.py  field_of_view_plot.py  quick.py  search_attrs.py  searching_with_sensor.py  solar_distance_query.py
examples/example_template/: example_template.py
sunpy_soar/: __init__.py  attrs.py  client.py
sunpy_soar/_dev/: __init__.py  scm_version.py
sunpy_soar/data/: attrs.json  observation_attrs.json  sensor_attrs.json
sunpy_soar/tests/: test_attrs.py  test_client.py  test_sunpy_soar.py
tools/: produce_attrs_json.py  update_data.py
