[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sunpy_soar/_version.py"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120
length_sort = "False"
length_sort_sections = "stdlib"

[tool.ruff]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"
line-length = 120
exclude=[
    ".git,",
    "__pycache__",
    "build",
    "tools/**",
]
select = [
       "E",
       "F",
       "W",
       "UP",
       "PT",
       "RET",
       "TID",
       "PLE",
       "NPY",
       "RUF",
       "PGH",
       "PTH",
       "BLE",
       "FBT",
       "B",
       "A",
       "COM",
       "C4",
       "T20",
       "RSE",
       "ERA",
]
fixable = [
       "E",
       "F",
       "W",
       "UP",
       "PT",
       "RET",
       "TID",
       "PLE",
       "NPY",
       "RUF",
       "PGH",
       "PTH",
       "BLE",
       "FBT",
       "B",
       "A",
       "COM",
       "C4",
       "T20",
       "RSE",
       "ERA",
]
extend-ignore = [
    "E501",  # Line too long
    # TODO: Fix in future
    "E741",  # Ambiguous variable name
]

[tool.ruff.per-file-ignores]
"examples/*.py" = [
    "T201", # We need print in our examples
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.codespell]
skip = "*.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg,.asv_env,.history"
ignore-words-list = "sav,soop,"

[tool.towncrier]
    package = "sunpy_soar"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    issue_format = "`#{issue} <https://github.com/sunpy/sunpy-soar/pull/{issue}>`__"
    title_format = "{version} ({project_date})"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Breaking Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "deprecation"
      name = "Deprecations"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "New Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Internal Changes"
      showcontent = true
