[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "sunpy_soar"
description = "A sunpy FIDO plugin for accessing data in the Solar Orbiter Archive (SOAR)."
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "The Sunpy Community", email = "sunpy@googlegroups.com" },
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
]
[project.urls]
repository = "https://sunpy.org"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "ndcube/_version.py"

select = [
       "E",
       "F",
       "W",
       "UP",
       "PT",
       "RET",
       "TID",
       "PLE",
       "NPY",
       "RUF",
       "PGH",
       "PTH",
       "BLE",
       "FBT",
       "B",
       "A",
       "COM",
       "C4",
       "T20",
       "RSE",
       "ERA",
]
fixable = [
       "E",
       "F",
       "W",
       "UP",
       "PT",
       "RET",
       "TID",
       "PLE",
       "NPY",
       "RUF",
       "PGH",
       "PTH",
       "BLE",
       "FBT",
       "B",
       "A",
       "COM",
       "C4",
       "T20",
       "RSE",
       "ERA",
]
extend-ignore = [
    "E501",  # Line too long
    # TODO: Fix in future
    "E741",  # Ambiguous variable name
]

[tool.towncrier]
    package = "sunpy_soar"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    issue_format = "`#{issue} <https://github.com/sunpy/sunpy-soar/pull/{issue}>`__"
    title_format = "{version} ({project_date})"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Breaking Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "deprecation"
      name = "Deprecations"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "New Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Internal Changes"
      showcontent = true
