[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sunpy_soar"
description = "A sunpy FIDO plugin for accessing data in the Solar Orbiter Archive (SOAR)."
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
<<<<<<<
=======
  { name = "The SunPy Community", email = "sunpy@googlegroups.com" },
]
>>>>>>>
  { name = "David Stansby"},
  { name = "The Sunpy Community", email = "sunpy@googlegroups.com" },
]
dependencies = [
  "astropy>=5.3.0",
  "sunpy[net]>=6.0.0",
  "requests>=2.28.0",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest-cov",
  "pytest-doctestplus",
  "pytest-xdist",
  "pytest",
  "responses>=0.20.0",
  "sunpy[map,net]>=6.0.0",
]
docs = [
  "matplotlib",
  "sphinx-automodapi",
  "sphinx-changelog",
  "sphinx-copybutton",
  "sphinx-gallery",
  "sphinx",
  "sphinxext-opengraph",
  "sunpy-sphinx-theme",
]

[project.urls]
Homepage = "https://sunpy.org"
Download = "https://pypi.org/project/sunpy-soar/"
"Source Code" = "https://github.com/sunpy/sunpy-soar/"
Documentation = "https://docs.sunpy.org/projects/soar/"
Changelog = "https://docs.sunpy.org/projects/soar/changelog.html"
"Issue Tracker" = "https://github.com/sunpy/sunpy-soar/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "sunpy_soar/_version.py"

[tool.towncrier]
    package = "sunpy_soar"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    issue_format = "`#{issue} <https://github.com/sunpy/sunpy-soar/pull/{issue}>`__"
    title_format = "{version} ({project_date})"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Breaking Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "deprecation"
      name = "Deprecations"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "New Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Internal Changes"
      showcontent = true
