[metadata]
name = sunpy-soar
description = A sunpy plugin for accessing data in the Solar Orbiter Archive (SOAR).
long_description = file: README.rst
author = David Stansby
author_email = d.stansby@ucl.ac.uk
url =
license = BSD-2
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >= 3.7
install_requires =
    sunpy[net]==5.0.0rc1
include_package_data = True

[options.extras_require]
tests =
    sunpy[map]==5.0.0rc1
    pytest
    pytest-cov

[tool:pytest]
addopts = --cov=sunpy_soar -rxXs
filterwarnings =
  error
  # See https://github.com/mvantellingen/python-zeep/issues/956
  ignore:defusedxml.lxml is no longer supported:DeprecationWarning
  ignore:numpy.ndarray size changed
  # This is coming from astropy
  ignore:The distutils package is deprecated
  # Zeep relies on deprecated cgi in Python 3.11
  ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning:zeep.utils
  # Not sure what these are
  ignore:unclosed <socket.socket.*:ResourceWarning
  ignore:unclosed event loop <_UnixSelectorEventLoop.*:ResourceWarning
