[metadata]
name = sunpy-soar
description = A sunpy FIDO plugin for accessing data in the Solar Orbiter Archive (SOAR).
long_description = file: README.rst
author = David Stansby and The SunPy Community
author_email = sunpy@googlegroups.com
url =
license = BSD-2
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >= 3.9
install_requires =
    sunpy[net]>=5.0
include_package_data = True

[options.extras_require]
tests =
    pytest
    sunpy[map,net]>=5.0
docs =
  sphinx
  sphinx-automodapi
  # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
  importlib-resources<6
  sphinx-changelog
  sphinx-copybutton
  sphinxext-opengraph
  sunpy-sphinx-theme

[tool:pytest]
filterwarnings =
  error
  # See https://github.com/mvantellingen/python-zeep/issues/956
  ignore:defusedxml.lxml is no longer supported:DeprecationWarning
  ignore:numpy.ndarray size changed
  # This is coming from astropy
  ignore:The distutils package is deprecated
  # Zeep relies on deprecated cgi in Python 3.11
  ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning:zeep.utils
  # Not sure what these are
  ignore:unclosed <socket.socket.*:ResourceWarning
  ignore:unclosed event loop <_UnixSelectorEventLoop.*:ResourceWarning
